deployments/graylog/graylog.yml
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: graylog-data
#  labels:
#    app: graylog
#spec:
#  accessModes:
#  - ReadWriteOnce
#  resources:
#    requests:
#      storage: 5Gi # Ajuste o tamanho conforme necessário
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  labels:
    app: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      containers:
      - name: graylog
        image: graylog/graylog:5.0
        ports:
        - containerPort: 9000
          protocol: TCP
          name: tcp  
        - containerPort: 12201
          protocol: UDP
          name: udp  
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: graylog-data
          mountPath: /usr/share/graylog/data  # Diretório padrão para dados do Graylog
      volumes:
      - name: graylog-data
        persistentVolumeClaim:
          claimName: graylog-data
---
apiVersion: v1
kind: Service
metadata:
  name: graylog
  labels:
    app: graylog
spec:
  ports:
  - port: 9000
    protocol: TCP
    name: "9000"
    targetPort: 9000
  - port: 12201
    protocol: UDP
    name: "12201"
    targetPort: 12201
  selector:
    app: graylog
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: logs.site.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graylog
            port:
              number: 9000
