deployments/graylog/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lps-logs.midianet.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graylog
            port:
              number: 9000
